TP-kube-01/step-2/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        ports:
        - containerPort: 3000
        livenessProbe:                      
          httpGet:
            path: /health                   
            port: 3000
          initialDelaySeconds: 10           
          periodSeconds: 5
      imagePullSecrets:
        - name: takima-school-registry
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - eu-west-3b
